# fighting-game

./: CMakeLists.txt  main.cpp
include/: GameManager.h  Player.h  PlayerConfig.h  Stage.h  player.h
src/: GameManager.cpp  Player.cpp  main.cpp
